--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -3,33 +3,50 @@
 {% block content %}
 
 <div class="starter-template">
-    <h1>Title</h1>
+    <h1>Simple Cyclic Scheduler Online</h1>
     <hr><br>
     <div>
-      <h3>Tasks</h3>
-      <p>Pick a task length...</p>
+        <h3>Tasks</h3>
         <form enctype="multipart/form-data" method="POST" id="form1" action="">
-            <input name="file" type="file" id="fileval">
-             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-primary" id="upload">Upload</button>
-              </div>
+            <input id="fileval" name="filename" type="file">
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <button class="btn btn-primary" id="schedule" type="button">Generate Schedule</button>
+            </div>
         </form>
-
     </div>
     <br><br>
     <div>
-      <h3>Task Status</h3>
-      <br>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Status</th>
-            <th>Result</th>
-          </tr>
-        </thead>
-        <tbody id="tasks">
-        </tbody>
+        <table class="table table-striped" id="task_table">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">Period</th>
+                <th scope="col">Execution</th>
+                <th scope="col">Deadline</th>
+                <th scope="col">Offset</th>
+                <th scope="col">Allowed Jitter</th>
+                <th scope="col">Fixed Start</th>
+                <th scope="col">CPU ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Function</th>
+            </tr>
+            </thead>
+            <tbody id="tasks">
+            </tbody>
+        </table>
+    </div>
+    <br><br>
+    <div>
+        <h3>Job Status</h3>
+        <br>
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Status</th>
+            </tr>
+            </thead>
+            <tbody id="sessions">
+            </tbody>
       </table>
     </div>
     <div id="plt_src">
