Centered image and web-page title

--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="starter-template">
-    <h1>Simple Cyclic Scheduler Online</h1>
+    <h1>Simple Cyclic Scheduling Online</h1>
     <hr><br>
     <div>
         <h3>Tasks</h3>
@@ -38,7 +38,7 @@
     <div>
         <h3>Job Status</h3>
         <br>
-        <table class="table">
+        <table class="table table-striped">
             <thead class="thead-dark">
             <tr>
                 <th scope="col">ID</th>
@@ -47,9 +47,9 @@
             </thead>
             <tbody id="sessions">
             </tbody>
-      </table>
+        </table>
     </div>
-    <div id="plt_src">
+    <div class="text-center" id="plt_src">
 
     </div>
   </div>
