Now uses an in-memory buffer on the back-end for the task-set

--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -9,6 +9,7 @@
         <h3>Tasks</h3>
         <form enctype="multipart/form-data" method="POST" id="form1" action="">
             <input id="fileval" name="filename" type="file">
+            <input id="tasks_data" name="tasks_data" type="hidden" value="">
             <div class="btn-group" role="group" aria-label="Basic example">
                 <button class="btn btn-primary" id="schedule" type="button">Generate Schedule</button>
             </div>
