--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -4,59 +4,65 @@
 
 <div class="starter-template">
     <h1>Simple Cyclic Scheduling Online</h1>
-    <hr><br>
-    <div>
-        <h3>Tasks</h3>
-        <form enctype="multipart/form-data" method="POST" id="form1" action="">
-            <input id="fileval" name="filename" type="file">
-            <input id="tasks_data" name="tasks_data" type="hidden" value="">
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-primary" id="schedule" type="button">Generate Schedule</button>
-            </div>
-        </form>
+    <hr>
+    <br>
+    <div class="card">
+        <div class="card-header">
+            <h3>Tasks</h3>
+            <form action="" enctype="multipart/form-data" id="form1" method="POST">
+                <input id="fileval" name="filename" type="file">
+                <input id="tasks_data" name="tasks_data" type="hidden" value="">
+                <div aria-label="Basic example" class="btn-group float-right" role="group">
+                    <button class="btn btn-primary" id="schedule" type="button">Generate Schedule</button>
+                </div>
+            </form>
+        </div>
+        <div class="card-body">
+            <span class="table-add float-right mb-3 mr-2"><a class="text-success" href="#!"><i
+                    aria-hidden="true" class="fas fa-plus fa-2x"></i></a></span>
+            <table class="table table-striped table-editable" id="task_table">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Period</th>
+                    <th scope="col">Execution</th>
+                    <th scope="col">Deadline</th>
+                    <th scope="col">Offset</th>
+                    <th scope="col">Allowed Jitter</th>
+                    <th scope="col">Fixed Start</th>
+                    <th scope="col">CPU ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Function</th>
+                </tr>
+                </thead>
+                <tbody id="tasks">
+                </tbody>
+            </table>
+        </div>
     </div>
-    <br><br>
-    <div>
-        <table class="table table-striped" id="task_table">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">Period</th>
-                <th scope="col">Execution</th>
-                <th scope="col">Deadline</th>
-                <th scope="col">Offset</th>
-                <th scope="col">Allowed Jitter</th>
-                <th scope="col">Fixed Start</th>
-                <th scope="col">CPU ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Function</th>
-            </tr>
-            </thead>
-            <tbody id="tasks">
-            </tbody>
-        </table>
+    <div class="card">
+        <h3 class="card-header">Job Status</h3>
+        <div class="card-body">
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Status</th>
+                </tr>
+                </thead>
+                <tbody id="sessions">
+                </tbody>
+            </table>
+        </div>
     </div>
-    <br><br>
-    <div>
-        <h3>Job Status</h3>
-        <br>
-        <table class="table table-striped">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Status</th>
-            </tr>
-            </thead>
-            <tbody id="sessions">
-            </tbody>
-        </table>
-    </div>
-    <div id="downloadBtn">
+    <div class="card">
+        <h3 class="card-header">Schedule
+            <div class="float-right" id="downloadBtn"></div>
+        </h3>
+        <div class="card-body text-center" id="plt_src">
 
+        </div>
     </div>
-    <div class="text-center" id="plt_src">
-
-    </div>
-  </div>
+</div>
 </div>
 
 {% endblock %}
