heroku worker fix, copyright remove, closing window fix

--- a/project/client/templates/footer.html
+++ b/project/client/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container">
-    <small><span class="text-muted">© <a href="">crap</a></span></small>
+{#    <small><span class="text-muted">© <a href=""></a></span></small>#}
   </div>
 </footer>
