Editable task table and added metrics (utlization, elapsed time) on the front page

--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- styles -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet" media="screen">
     {% block css %}{% endblock %}
   </head>
