--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -19,7 +19,7 @@
         </div>
         <div class="card-body">
             <span class="table-add float-right mb-3 mr-2"><a class="text-success" href="#!"><i
-                    aria-hidden="true" class="fas fa-plus fa-2x"></i></a></span>
+                    aria-hidden="true" class="fa fa-plus fa-2x"></i></a></span>
             <table class="table table-striped table-editable" id="task_table">
                 <thead class="thead-dark">
                 <tr>
@@ -32,6 +32,7 @@
                     <th scope="col">CPU ID</th>
                     <th scope="col">Name</th>
                     <th scope="col">Function</th>
+                    <th scope="col">Remove</th>
                 </tr>
                 </thead>
                 <tbody id="tasks">
@@ -47,6 +48,7 @@
                 <tr>
                     <th scope="col">ID</th>
                     <th scope="col">Status</th>
+                    <th scope="col">Elapsed Time (ms)</th>
                 </tr>
                 </thead>
                 <tbody id="sessions">
@@ -56,6 +58,7 @@
     </div>
     <div class="card">
         <h3 class="card-header">Schedule
+            <span id="sched_util"></span>
             <div class="float-right" id="downloadBtn"></div>
         </h3>
         <div class="card-body text-center" id="plt_src">
