--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -6,8 +6,18 @@
     <title>Simple Cyclic Scheduling Online{% block title %}{% endblock %}</title>
     <!-- meta -->
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Christos Gkiokas & Eleftherios Kyriakakis">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="google-site-verification" content="NaxDyfhusodzLVeqbg19OmrFVv2A9QFUlh-eLqciHWs" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171070137-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-171070137-1');
+    </script>
     <!-- styles -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -18,6 +28,12 @@
   <body>
 
     <div class="container">
+        <strong><nav>
+            <ul class="menu">
+                <li><a href="{{ url_for('main.home') }}">Home</a></li>
+                <li><a href="{{ url_for('main.info') }}">App Information</a></li>
+            </ul>
+        </nav></strong>
       <!-- child template -->
       {% block content %}{% endblock %}
     </div>
