--- a/project/client/templates/main/info.html
+++ b/project/client/templates/main/info.html
@@ -8,16 +8,28 @@
     <br>
     <div class="card">
         <div class="card-header">
-            <h3>Tasks</h3>
-            <form action="" enctype="multipart/form-data" id="form1" method="POST">
-                <input id="fileval" name="filename" type="file">
-                <input id="tasks_data" name="tasks_data" type="hidden" value="">
-                <div aria-label="Basic example" class="btn-group float-right" role="group">
-                    <button class="btn btn-primary" id="schedule" type="button">Generate Schedule</button>
-                </div>
-            </form>
+            <h3>How to use:</h3>
+
         </div>
         <div class="card-body">
+            <div>
+                <p> The app can be used in two ways. Firstly by using the table input as shown below to enter the desired tasks specification.
+                    In addition the table can be created as a .csv and be uploaded for processing. The .csv format must mimic the input table and start with the field headers from cell 1A. </p>
+                <h6>Fields:</h6>
+                <ul>
+                    <li>Period:</li>
+                    <li>Execution:</li>
+                    <li>Deadline:</li>
+                    <li>Offset:</li>
+                    <li>Allowed Jitter:</li>
+                    <li>Fixed Start:</li>
+                    <li>CPU ID:</li>
+                    <li>Name:</li>
+                    <li>Function:</li>
+                    <li>Remove:</li>
+                </ul>
+            </div>
+
             <span class="table-add float-right mb-3 mr-2"><a class="text-success" href="#!"><i
                     aria-hidden="true" class="fa fa-plus fa-2x"></i></a></span>
             <table class="table table-striped table-editable" id="task_table">
@@ -37,36 +49,20 @@
                 </thead>
                 <tbody id="tasks">
                 </tbody>
-
             </table>
-             <h5 id="util">Utilization:</h5> <h5 id="utilVal"></h5>
         </div>
     </div>
     <div class="card">
-        <h3 class="card-header">Job Status</h3>
+        <h3 class="card-header">Background</h3>
         <div class="card-body">
-            <table class="table table-striped">
-                <thead class="thead-dark">
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Elapsed Time (ms)</th>
-                </tr>
-                </thead>
-                <tbody id="sessions">
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="card">
-        <h3 class="card-header">Schedule
-            <span id="sched_util"></span>
-            <div class="float-right" id="downloadBtn"></div>
-        </h3>
-        <div class="card-body text-center" id="plt_src">
 
         </div>
     </div>
+{#    <div class="card">#}
+{#        <h3 class="card-header">Authors?</h3>#}
+{##}
+{#        </div>#}
+{#    </div>#}
 </div>
 </div>
 
