seo stuff, ui fixes

--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <title>Simple Cyclic Scheduling Online{% block title %}{% endblock %}</title>
     <!-- meta -->
-    <meta name="description" content="">
+    <meta name="description" content="A simple SMT-based schedule generator for cyclic executives real-time tasks">
+    <meta name="keywords" content="scheduler, real-time-systems, smt, schedule-generator">
     <meta name="author" content="Christos Gkiokas & Eleftherios Kyriakakis">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="google-site-verification" content="NaxDyfhusodzLVeqbg19OmrFVv2A9QFUlh-eLqciHWs" />
+    <meta name="og:title" property="og:title" content="Simple Cyclic Scheduling Online">
+    <meta name="og:description" property="og:description" content="A simple SMT-based schedule generator for cyclic executives real-time tasks">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171070137-1"></script>
     <script>
