--- a/project/client/static/style.css
+++ b/project/client/static/style.css
@@ -24,3 +24,6 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 .content textarea { min-height: 12em; resize: vertical; }
 input.danger { color: #cc2f2e; }
 input[type=submit] { align-self: start; min-width: 10em; }
+img {background-size: contain;width: 100%; height: auto;}
+.mobile #fileval {padding-bottom: 5px;}
+.mobile #form1 {text-align: center;}
