--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -12,11 +12,11 @@
             <form action="" enctype="multipart/form-data" id="form1" method="POST">
                 <input id="fileval" name="filename" type="file">
                 <input id="tasks_data" name="tasks_data" type="hidden" value="">
-                <div aria-label="Basic example" class="btn-group float-right" role="group">
+                <div id="top-buttons" aria-label="Basic example" class="" role="group">
                     <button class="btn btn-primary" id="exportCsv" type="button"><i class="fa fa-calendar"></i> Export
                         CSV
                     </button>
-                    <button class="btn btn-primary ml-2" id="schedule" type="button"><i class="fa fa-tasks"></i>
+                    <button class="btn btn-primary" id="schedule" type="button"><i class="fa fa-tasks"></i>
                         Generate Schedule
                     </button>
                 </div>
@@ -24,7 +24,7 @@
         </div>
         <div class="card-body">
             <span class="table-add float-right mb-3" id="addNewTask">
-               <button class="btn btn-success" type="button"><i class="fa fa-plus"></i> Add New Task</button>
+               <button class="btn btn-success btn-responsive" type="button"><i class="fa fa-plus"></i> Add New Task</button>
             </span>
             <table class="table table-bordered table-responsive-md table-striped table-editable" id="task_table">
                 <thead class="thead-dark">
@@ -52,7 +52,7 @@
     <div class="card">
         <h3 class="card-header">Job Status</h3>
         <div class="card-body">
-            <table class="table table-striped">
+            <table class="table table-striped table-responsive-md">
                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">ID</th>
