--- a/project/client/templates/footer.html
+++ b/project/client/templates/footer.html
@@ -1,6 +1,12 @@
 <footer class="footer">
   <div class="container">
-    <small><span class="text-muted">Designed by Chris Gkiokas & Eleftherios Kyriakakis © <a
-            href="">2020</a></span></small>
+      <small>
+      <span class="text-muted">
+      Designed by <a href="https://www.researchgate.net/profile/Chris_Gkiokas" target="_blank">Chris Gkiokas</a>
+        & <a href="https://www.researchgate.net/profile/Eleftherios_Kyriakakis"
+             target="_blank">Eleftherios Kyriakakis</a>
+        © 2020
+      </span>
+      </small>
   </div>
 </footer>
