--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -13,7 +13,8 @@
                 <input id="fileval" name="filename" type="file">
                 <input id="tasks_data" name="tasks_data" type="hidden" value="">
                 <div id="top-buttons" aria-label="Basic example" class="" role="group">
-                    <button class="btn btn-primary" id="exportCsv" type="button"><i class="fa fa-calendar"></i> Export
+                    <button class="btn btn-primary mr-1" id="exportCsv" type="button"><i class="fa fa-calendar"></i>
+                        Export
                         CSV
                     </button>
                     <button class="btn btn-primary" id="schedule" type="button"><i class="fa fa-tasks"></i>
