Re-enabling fixed start

--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -36,6 +36,7 @@
                     <th scope="col">Offset</th>
                     <th scope="col">Allowed Jitter</th>
                     <th scope="col">CPU ID</th>
+                    <th scope="col">Fixed Start</th>
                     <th scope="col">Name</th>
                     <th scope="col">Function</th>
                     <th scope="col">Action</th>
