--- a/project/client/templates/main/info.html
+++ b/project/client/templates/main/info.html
@@ -41,6 +41,11 @@
                         executed
                         by different processors.
                     </li>
+                    <li><strong>Fixed Start:</strong> Defines a fixed initial release point in time for the task.
+                        This field allows to partly bypass the automated scheduling, for the specific task, and
+                        the scheduler will try to fit other tasks based on this point in time. Using can field
+                        for all tasks can be used to validate a manually scheduled task set.
+                    </li>
                     <li><strong>Name:</strong> Sets the name of the task both in the generated plot and the generate
                         code.
                     </li>
