Chnaged from png to svg schedule display

--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -71,7 +71,7 @@
         <h3 class="card-header">Schedule
             <div class="float-right" id="downloadBtn"></div>
         </h3>
-        <div class="card-body text-center" id="plt_src">
+        <div class="card-body text-center responsive-img" id="plt_src">
 
         </div>
     </div>
