--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -12,14 +12,28 @@
             <form action="" enctype="multipart/form-data" id="form1" method="POST">
                 <input id="fileval" name="filename" type="file">
                 <input id="tasks_data" name="tasks_data" type="hidden" value="">
-                <div id="top-buttons" aria-label="Basic example" class="" role="group">
-                    <button class="btn btn-primary mr-1" id="exportCsv" type="button"><i class="fa fa-calendar"></i>
-                        Export
-                        CSV
-                    </button>
-                    <button class="btn btn-primary" id="schedule" type="button"><i class="fa fa-tasks"></i>
-                        Generate Schedule
-                    </button>
+                <div>
+                    <div class="form-check-inline">
+                        <input class="form-check-input" id="optimizeCheck" type="checkbox" value="">
+                        <label class="form-check-label" for="optimizeCheck">
+                            Optimization
+                        </label>
+                    </div>
+                    <div class="form-check-inline">
+                        <input class="form-check-input" disabled id="annealingCheck" type="checkbox" value="">
+                        <label class="form-check-label" for="annealingCheck">
+                            Use simulated annealing
+                        </label>
+                    </div>
+                    <div aria-label="Basic example" class="" id="top-buttons" role="group">
+                        <button class="btn btn-primary mr-1" id="exportCsv" type="button"><i class="fa fa-calendar"></i>
+                            Export
+                            CSV
+                        </button>
+                        <button class="btn btn-primary" id="schedule" type="button"><i class="fa fa-tasks"></i>
+                            Generate Schedule
+                        </button>
+                    </div>
                 </div>
             </form>
         </div>
