--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -45,13 +45,14 @@
     {% include 'footer.html' %}
 
     <!-- scripts -->
-
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/g/filesaver.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.1.0/math.js"></script>
+    <script src="path/to/pts.js" type="text/javascript"></script>
     <script src="{{url_for('static', filename='scripts.js')}}" type="text/javascript"></script>
     {% block js %}{% endblock %}
   </body>
