--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -13,13 +13,19 @@
                 <input id="fileval" name="filename" type="file">
                 <input id="tasks_data" name="tasks_data" type="hidden" value="">
                 <div>
-                    <div class="form-check-inline">
+                    <div class="form-group">
+                        <label for="wcet_gap">
+                            WCET context switching gap
+                        </label>
+                        <input class="form-control" id="wcet_gap" name="wcet_gap" type="number" value="0">
+                    </div>
+                    <div class="form-group form-check-inline">
                         <input class="form-check-input" id="optimizeCheck" type="checkbox" value="">
                         <label class="form-check-label" for="optimizeCheck">
                             Optimization
                         </label>
                     </div>
-                    <div class="form-check-inline">
+                    <div class="form-group form-check-inline">
                         <input class="form-check-input" disabled id="annealingCheck" type="checkbox" value="">
                         <label class="form-check-label" for="annealingCheck">
                             Use simulated annealing
@@ -41,7 +47,8 @@
             <span class="table-add float-right mb-3" id="addNewTask">
                <button class="btn btn-success btn-responsive" type="button"><i class="fa fa-plus"></i> Add New Task</button>
             </span>
-            <table class="table table-bordered table-responsive-md table-striped table-editable" id="task_table">
+            <table class="table table-bordered table-responsive-md table-hover table-striped table-editable"
+                   id="task_table">
                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">Period</th>
@@ -60,8 +67,14 @@
                 </tbody>
             </table>
             <div class="float-left">
-                <h6 class="float-left mr-2" id="util">Utilization:</h6>
-                <h6 class="float-right" id="utilVal"></h6>
+                <div>
+                    <h6 class="float-left mr-2" id="util">Utilization:</h6>
+                    <h6 class="float-right" id="utilVal"></h6>
+                </div>
+                <div>
+                    <h6 class="float-left mr-2" id="hyper">Hyperperiod:</h6>
+                    <h6 class="float-right" id="hyperVal"></h6>
+                </div>
             </div>
         </div>
     </div>
