Fixed LCM bug calculation

--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -45,7 +45,8 @@
         </div>
         <div class="card-body">
             <span class="table-add float-right mb-3" id="addNewTask">
-               <button class="btn btn-success btn-responsive" type="button"><i class="fa fa-plus"></i> Add New Task</button>
+               <button class="btn btn-success btn-responsive" type="button"><i
+                       class="fa fa-plus"></i> Add New Task</button>
             </span>
             <table class="table table-bordered table-responsive-md table-hover table-striped table-editable"
                    id="task_table">
@@ -98,10 +99,12 @@
         <h3 class="card-header">Schedule
             <div class="float-right" id="downloadBtn"></div>
         </h3>
-        <div class="card-body text-center responsive-img" id="plt_src">
-
-        </div>
+        <div class="card-body text-center responsive-img" id="plt_src"></div>
     </div>
+    <!--    <div class="card">-->
+    <!--        <h3 class="card-header">Schedule Timeline</h3>-->
+    <!--        <div class="card-body text-center responsive-img" id="chart"></div>-->
+    <!--    </div>-->
 </div>
 </div>
 
