--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -26,6 +26,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet" media="screen">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <link href="dist/timeline-chart.css" rel="stylesheet">
     {% block css %}{% endblock %}
   </head>
 
@@ -52,7 +53,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/g/filesaver.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.1.0/math.js"></script>
-    <script src="path/to/pts.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chronoline/0.1.6/chronoline.js" type="text/javascript"></script>
+    <script src="/path/to/d3.min.js"></script>
+    <script src="/path/to/d3-tip.min.js"></script>
+    <script src="dist/timeline-chart.js"></script>
     <script src="{{url_for('static', filename='scripts.js')}}" type="text/javascript"></script>
     {% block js %}{% endblock %}
   </body>
