New vis-timeline plotting with editing (WiP)

--- a/project/client/templates/_base.html
+++ b/project/client/templates/_base.html
@@ -15,18 +15,22 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171070137-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
 
-    gtag('config', 'UA-171070137-1');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+
+      gtag('js', new Date());
+
+      gtag('config', 'UA-171070137-1');
     </script>
     <!-- styles -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet" media="screen">
-    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-    <link href="dist/timeline-chart.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis-timeline-graph2d.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet"/>
     {% block css %}{% endblock %}
   </head>
 
@@ -54,9 +58,12 @@
     <script src="https://cdn.jsdelivr.net/g/filesaver.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.1.0/math.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chronoline/0.1.6/chronoline.js" type="text/javascript"></script>
-    <script src="/path/to/d3.min.js"></script>
-    <script src="/path/to/d3-tip.min.js"></script>
-    <script src="dist/timeline-chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis-timeline-graph2d.min.js"></script>
+    <script src="{{url_for('static', filename='arrows.js')}}" type="text/javascript"></script>
     <script src="{{url_for('static', filename='scripts.js')}}" type="text/javascript"></script>
     {% block js %}{% endblock %}
   </body>
