--- a/project/client/templates/main/home.html
+++ b/project/client/templates/main/home.html
@@ -95,16 +95,12 @@
             </table>
         </div>
     </div>
-    <div class="card">
-        <h3 class="card-header">Schedule
+    <div class="card" id="schedule_card">
+        <h3 class="card-header">Schedule Timeline
             <div class="float-right" id="downloadBtn"></div>
         </h3>
-        <div class="card-body text-center responsive-img" id="plt_src"></div>
+        <div class="card-body" id="schedule_chart" style="height: 100%"></div>
     </div>
-    <!--    <div class="card">-->
-    <!--        <h3 class="card-header">Schedule Timeline</h3>-->
-    <!--        <div class="card-body text-center responsive-img" id="chart"></div>-->
-    <!--    </div>-->
 </div>
 </div>
 
