--- a/project/client/static/style.css
+++ b/project/client/static/style.css
@@ -21,13 +21,59 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 .content form { margin: 1em 0; display: flex; flex-direction: column; }
 .content label { font-weight: bold; margin-bottom: 0.5em; }
 .content input, .content textarea { margin-bottom: 1em; }
-.content textarea { min-height: 12em; resize: vertical; }
-input.danger { color: #cc2f2e; }
-input[type=submit] { align-self: start; min-width: 10em; }
-img {background-size: contain;width: 100%; height: auto;}
-.mobile #fileval {padding-bottom: 5px;}
-.mobile #form1 {text-align: center;}
+.content textarea {
+    min-height: 12em;
+    resize: vertical;
+}
+
+input.danger {
+    color: #cc2f2e;
+}
+
+input[type=submit] {
+    align-self: start;
+    min-width: 10em;
+}
+
+img {
+    background-size: contain;
+    width: 100%;
+    height: auto;
+}
+
+.mobile #fileval {
+    padding-bottom: 5px;
+}
+
+.mobile #form1 {
+    text-align: center;
+}
+
 .responsive-img {
     max-width: 100%;
     height: auto;
+}
+
+.vis-item.green {
+    background-color: #3c763d;
+    border-color: #3c763d;
+}
+
+/* create a custom sized dot at the bottom of the red item */
+.vis-item.red {
+    background-color: #a94442;
+    border-color: #a94442;
+}
+
+.vis-item.vis-dot.red {
+}
+
+.vis-item.vis-line.red {
+}
+
+.vis-item.vis-box.red {
+}
+
+.vis-item.vis-background.warning {
+    background-color: rgba(255, 0, 0, 0.2);
 }
